--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,23 @@ body {
   animation-name: moveInRight;
   animation-duration: 1s; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #55f57a, #28b485);
+  -webkit-background-clip: text;
+  letter-spacing: 2px;
+  color: transparent;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -108,6 +125,23 @@ body {
   animation: moveInBottom 0.4s ease-out 0.75s;
   animation-fill-mode: backwards; }
 
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2);
+    background-color: orangered;
+    float: left; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
+
 header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, #7ed56fc4, #28b485c2), url("../img/hero.jpg");
@@ -129,6 +163,11 @@ header {
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center; }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
 
 /**
 colors
