--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,14 @@
+//COLORS
 $color-primary: #7ed56f;
 $color-primary-ligth: #55f57a;
 $color-primary-dark: #28b485;
 
+$color-gray-ligth-1: #f7f7f7;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
