--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,15 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-features {
+  margin: -10rem 0;
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, #7ed56fc4, #28b485c2),
+    url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  & > * {
+    transform: skewY(7deg);
+  }
+}
