--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,8 @@ body {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-4 {
     width: calc((100% - (6rem* 3)) / 4); }
+  .row .col-1-of-3 {
+    width: calc((100% - (6rem* 2)) / 3); }
 
 header {
   height: 95vh;
