--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -19,4 +19,7 @@
   .col-1-of-4 {
     width: calc((100% - (#{$gutter-horizontal}* 3)) / 4);
   }
+  .col-1-of-3 {
+    width: calc((100% - (#{$gutter-horizontal}* 2)) / 3);
+  }
 }
