--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/tours";
 @import "layout/grid";
 @import "layout/header";
 @import "pages/home";
