--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 //COLORS
 $color-primary: #7ed56f;
-$color-primary-ligth: #55f57a;
+$color-primary-light: #55f57a;
 $color-primary-dark: #28b485;
 
 $color-secondary-light: #ffb900;
